Compilateur/lex.output
Terminals which are not used

   tNE
   tGE
   tLE


Grammar

    0 $accept: Program $end

    1 Program: Function_list

    2 Function_list: Function
    3              | Function_list Function

    4 Function: Type_specifier tMAIN tLPAR Parameter_list tRPAR tLBRACE Corps Return_statement tRBRACE

    5 @1: /* empty */

    6 @2: /* empty */

    7 Function: Type_specifier tID @1 tLPAR Parameter_list tRPAR tLBRACE Corps Return_statement @2 tRBRACE

    8 Corps: Declarations Statement_list

    9 Type_specifier: tINT
   10               | tVOID

   11 Parameter_list: /* empty */
   12               | Parameter_declaration
   13               | Parameter_list tCOMMA Parameter_declaration

   14 Parameter_declaration: tINT tID
   15                      | tVOID

   16 Statement_list: Statement
   17               | Statement_list Statement

   18 Statement: Assignement_statement
   19          | Selection_statement
   20          | Function_call
   21          | Iteration_statement
   22          | Print_statement

   23 Function_call: tID tLPAR Arguments tRPAR tSEMI

   24 Arguments: Expression
   25          | Expression tCOMMA Expression

   26 Expression: Expression tADD Expression
   27           | Expression tSUB Expression
   28           | Expression tMUL Expression
   29           | Expression tDIV Expression
   30           | Facteur

   31 Facteur: tNB
   32        | tID
   33        | tLPAR Expression tRPAR

   34 Conditions: Conditions Separator Condition
   35           | Condition
   36           | tNOT Condition

   37 Condition: tLPAR Expression tLT Expression tRPAR
   38          | tLPAR Expression tGT Expression tRPAR
   39          | tLPAR Expression tEQ Expression tRPAR
   40          | Expression tLT Expression
   41          | Expression tGT Expression
   42          | Expression tEQ Expression
   43          | Expression

   44 Separator: tAND
   45          | tOR

   46 Declarations: /* empty */
   47             | Declaration_list

   48 Declaration_list: Declaration_statement
   49                 | Declaration_list Declaration_statement

   50 Declaration_statement: tINT Declaration_int tSEMI
   51                      | tCONST tINT Declaration_const tSEMI

   52 Declaration_const: tID tASSIGN tNB
   53                  | tID tASSIGN tNB tCOMMA Declaration_const

   54 Declaration_int: tID
   55                | tID tASSIGN Expression
   56                | tID tASSIGN Expression tCOMMA Declaration_int
   57                | tID tCOMMA Declaration_int

   58 @3: /* empty */

   59 @4: /* empty */

   60 @5: /* empty */

   61 Selection_statement: tIF tLPAR Conditions @3 tRPAR tLBRACE @4 Corps @5 tRBRACE Else_statement

   62 Else_statement: /* empty */

   63 @6: /* empty */

   64 @7: /* empty */

   65 Else_statement: tELSE @6 tLBRACE @7 Statement_list tRBRACE

   66 @8: /* empty */

   67 @9: /* empty */

   68 @10: /* empty */

   69 @11: /* empty */

   70 Iteration_statement: tWHILE tLPAR @8 Conditions @9 tRPAR tLBRACE @10 Statement_list @11 tRBRACE

   71 Return_statement: /* empty */
   72                 | tRETURN Expression tSEMI
   73                 | tRETURN tSEMI

   74 Print_statement: tPRINT tLPAR Expression tRPAR tSEMI

   75 Assignement_statement: tID tASSIGN Expression tSEMI


Terminals, with rules where they appear

$end (0) 0
error (256)
tINT (258) 9 14 50 51
tVOID (259) 10 15
tCONST (260) 51
tMAIN (261) 4
tRETURN (262) 72 73
tPRINT (263) 74
tADD (264) 26
tSUB (265) 27
tMUL (266) 28
tDIV (267) 29
tLT (268) 37 40
tGT (269) 38 41
tNE (270)
tEQ (271) 39 42
tGE (272)
tLE (273)
tASSIGN (274) 52 53 55 56 75
tAND (275) 44
tOR (276) 45
tNOT (277) 36
tLBRACE (278) 4 7 61 65 70
tRBRACE (279) 4 7 61 65 70
tLPAR (280) 4 7 23 33 37 38 39 61 70 74
tRPAR (281) 4 7 23 33 37 38 39 61 70 74
tSEMI (282) 23 50 51 72 73 74 75
tCOMMA (283) 13 25 53 56 57
tNB (284) 31 52 53
tIF (285) 61
tELSE (286) 65
tWHILE (287) 70
tID (288) 7 14 23 32 52 53 54 55 56 57 75


Nonterminals, with rules where they appear

$accept (34)
    on left: 0
Program (35)
    on left: 1, on right: 0
Function_list (36)
    on left: 2 3, on right: 1 3
Function (37)
    on left: 4 7, on right: 2 3
@1 (38)
    on left: 5, on right: 7
@2 (39)
    on left: 6, on right: 7
Corps (40)
    on left: 8, on right: 4 7 61
Type_specifier (41)
    on left: 9 10, on right: 4 7
Parameter_list (42)
    on left: 11 12 13, on right: 4 7 13
Parameter_declaration (43)
    on left: 14 15, on right: 12 13
Statement_list (44)
    on left: 16 17, on right: 8 17 65 70
Statement (45)
    on left: 18 19 20 21 22, on right: 16 17
Function_call (46)
    on left: 23, on right: 20
Arguments (47)
    on left: 24 25, on right: 23
Expression (48)
    on left: 26 27 28 29 30, on right: 24 25 26 27 28 29 33 37 38 39
    40 41 42 43 55 56 72 74 75
Facteur (49)
    on left: 31 32 33, on right: 30
Conditions (50)
    on left: 34 35 36, on right: 34 61 70
Condition (51)
    on left: 37 38 39 40 41 42 43, on right: 34 35 36
Separator (52)
    on left: 44 45, on right: 34
Declarations (53)
    on left: 46 47, on right: 8
Declaration_list (54)
    on left: 48 49, on right: 47 49
Declaration_statement (55)
    on left: 50 51, on right: 48 49
Declaration_const (56)
    on left: 52 53, on right: 51 53
Declaration_int (57)
    on left: 54 55 56 57, on right: 50 56 57
Selection_statement (58)
    on left: 61, on right: 19
@3 (59)
    on left: 58, on right: 61
@4 (60)
    on left: 59, on right: 61
@5 (61)
    on left: 60, on right: 61
Else_statement (62)
    on left: 62 65, on right: 61
@6 (63)
    on left: 63, on right: 65
@7 (64)
    on left: 64, on right: 65
Iteration_statement (65)
    on left: 70, on right: 21
@8 (66)
    on left: 66, on right: 70
@9 (67)
    on left: 67, on right: 70
@10 (68)
    on left: 68, on right: 70
@11 (69)
    on left: 69, on right: 70
Return_statement (70)
    on left: 71 72 73, on right: 4 7
Print_statement (71)
    on left: 74, on right: 22
Assignement_statement (72)
    on left: 75, on right: 18


state 0

    0 $accept: . Program $end

    tINT   shift, and go to state 1
    tVOID  shift, and go to state 2

    Program         go to state 3
    Function_list   go to state 4
    Function        go to state 5
    Type_specifier  go to state 6


state 1

    9 Type_specifier: tINT .

    $default  reduce using rule 9 (Type_specifier)


state 2

   10 Type_specifier: tVOID .

    $default  reduce using rule 10 (Type_specifier)


state 3

    0 $accept: Program . $end

    $end  shift, and go to state 7


state 4

    1 Program: Function_list .
    3 Function_list: Function_list . Function

    tINT   shift, and go to state 1
    tVOID  shift, and go to state 2

    $default  reduce using rule 1 (Program)

    Function        go to state 8
    Type_specifier  go to state 6


state 5

    2 Function_list: Function .

    $default  reduce using rule 2 (Function_list)


state 6

    4 Function: Type_specifier . tMAIN tLPAR Parameter_list tRPAR tLBRACE Corps Return_statement tRBRACE
    7         | Type_specifier . tID @1 tLPAR Parameter_list tRPAR tLBRACE Corps Return_statement @2 tRBRACE

    tMAIN  shift, and go to state 9
    tID    shift, and go to state 10


state 7

    0 $accept: Program $end .

    $default  accept


state 8

    3 Function_list: Function_list Function .

    $default  reduce using rule 3 (Function_list)


state 9

    4 Function: Type_specifier tMAIN . tLPAR Parameter_list tRPAR tLBRACE Corps Return_statement tRBRACE

    tLPAR  shift, and go to state 11


state 10

    7 Function: Type_specifier tID . @1 tLPAR Parameter_list tRPAR tLBRACE Corps Return_statement @2 tRBRACE

    $default  reduce using rule 5 (@1)

    @1  go to state 12


state 11

    4 Function: Type_specifier tMAIN tLPAR . Parameter_list tRPAR tLBRACE Corps Return_statement tRBRACE

    tINT   shift, and go to state 13
    tVOID  shift, and go to state 14

    $default  reduce using rule 11 (Parameter_list)

    Parameter_list         go to state 15
    Parameter_declaration  go to state 16


state 12

    7 Function: Type_specifier tID @1 . tLPAR Parameter_list tRPAR tLBRACE Corps Return_statement @2 tRBRACE

    tLPAR  shift, and go to state 17


state 13

   14 Parameter_declaration: tINT . tID

    tID  shift, and go to state 18


state 14

   15 Parameter_declaration: tVOID .

    $default  reduce using rule 15 (Parameter_declaration)


state 15

    4 Function: Type_specifier tMAIN tLPAR Parameter_list . tRPAR tLBRACE Corps Return_statement tRBRACE
   13 Parameter_list: Parameter_list . tCOMMA Parameter_declaration

    tRPAR   shift, and go to state 19
    tCOMMA  shift, and go to state 20


state 16

   12 Parameter_list: Parameter_declaration .

    $default  reduce using rule 12 (Parameter_list)


state 17

    7 Function: Type_specifier tID @1 tLPAR . Parameter_list tRPAR tLBRACE Corps Return_statement @2 tRBRACE

    tINT   shift, and go to state 13
    tVOID  shift, and go to state 14

    $default  reduce using rule 11 (Parameter_list)

    Parameter_list         go to state 21
    Parameter_declaration  go to state 16


state 18

   14 Parameter_declaration: tINT tID .

    $default  reduce using rule 14 (Parameter_declaration)


state 19

    4 Function: Type_specifier tMAIN tLPAR Parameter_list tRPAR . tLBRACE Corps Return_statement tRBRACE

    tLBRACE  shift, and go to state 22


state 20

   13 Parameter_list: Parameter_list tCOMMA . Parameter_declaration

    tINT   shift, and go to state 13
    tVOID  shift, and go to state 14

    Parameter_declaration  go to state 23


state 21

    7 Function: Type_specifier tID @1 tLPAR Parameter_list . tRPAR tLBRACE Corps Return_statement @2 tRBRACE
   13 Parameter_list: Parameter_list . tCOMMA Parameter_declaration

    tRPAR   shift, and go to state 24
    tCOMMA  shift, and go to state 20


state 22

    4 Function: Type_specifier tMAIN tLPAR Parameter_list tRPAR tLBRACE . Corps Return_statement tRBRACE

    tINT    shift, and go to state 25
    tCONST  shift, and go to state 26

    $default  reduce using rule 46 (Declarations)

    Corps                  go to state 27
    Declarations           go to state 28
    Declaration_list       go to state 29
    Declaration_statement  go to state 30


state 23

   13 Parameter_list: Parameter_list tCOMMA Parameter_declaration .

    $default  reduce using rule 13 (Parameter_list)


state 24

    7 Function: Type_specifier tID @1 tLPAR Parameter_list tRPAR . tLBRACE Corps Return_statement @2 tRBRACE

    tLBRACE  shift, and go to state 31


state 25

   50 Declaration_statement: tINT . Declaration_int tSEMI

    tID  shift, and go to state 32

    Declaration_int  go to state 33


state 26

   51 Declaration_statement: tCONST . tINT Declaration_const tSEMI

    tINT  shift, and go to state 34


state 27

    4 Function: Type_specifier tMAIN tLPAR Parameter_list tRPAR tLBRACE Corps . Return_statement tRBRACE

    tRETURN  shift, and go to state 35

    $default  reduce using rule 71 (Return_statement)

    Return_statement  go to state 36


state 28

    8 Corps: Declarations . Statement_list

    tPRINT  shift, and go to state 37
    tIF     shift, and go to state 38
    tWHILE  shift, and go to state 39
    tID     shift, and go to state 40

    Statement_list         go to state 41
    Statement              go to state 42
    Function_call          go to state 43
    Selection_statement    go to state 44
    Iteration_statement    go to state 45
    Print_statement        go to state 46
    Assignement_statement  go to state 47


state 29

   47 Declarations: Declaration_list .
   49 Declaration_list: Declaration_list . Declaration_statement

    tINT    shift, and go to state 25
    tCONST  shift, and go to state 26

    $default  reduce using rule 47 (Declarations)

    Declaration_statement  go to state 48


state 30

   48 Declaration_list: Declaration_statement .

    $default  reduce using rule 48 (Declaration_list)


state 31

    7 Function: Type_specifier tID @1 tLPAR Parameter_list tRPAR tLBRACE . Corps Return_statement @2 tRBRACE

    tINT    shift, and go to state 25
    tCONST  shift, and go to state 26

    $default  reduce using rule 46 (Declarations)

    Corps                  go to state 49
    Declarations           go to state 28
    Declaration_list       go to state 29
    Declaration_statement  go to state 30


state 32

   54 Declaration_int: tID .
   55                | tID . tASSIGN Expression
   56                | tID . tASSIGN Expression tCOMMA Declaration_int
   57                | tID . tCOMMA Declaration_int

    tASSIGN  shift, and go to state 50
    tCOMMA   shift, and go to state 51

    $default  reduce using rule 54 (Declaration_int)


state 33

   50 Declaration_statement: tINT Declaration_int . tSEMI

    tSEMI  shift, and go to state 52


state 34

   51 Declaration_statement: tCONST tINT . Declaration_const tSEMI

    tID  shift, and go to state 53

    Declaration_const  go to state 54


state 35

   72 Return_statement: tRETURN . Expression tSEMI
   73                 | tRETURN . tSEMI

    tLPAR  shift, and go to state 55
    tSEMI  shift, and go to state 56
    tNB    shift, and go to state 57
    tID    shift, and go to state 58

    Expression  go to state 59
    Facteur     go to state 60


state 36

    4 Function: Type_specifier tMAIN tLPAR Parameter_list tRPAR tLBRACE Corps Return_statement . tRBRACE

    tRBRACE  shift, and go to state 61


state 37

   74 Print_statement: tPRINT . tLPAR Expression tRPAR tSEMI

    tLPAR  shift, and go to state 62


state 38

   61 Selection_statement: tIF . tLPAR Conditions @3 tRPAR tLBRACE @4 Corps @5 tRBRACE Else_statement

    tLPAR  shift, and go to state 63


state 39

   70 Iteration_statement: tWHILE . tLPAR @8 Conditions @9 tRPAR tLBRACE @10 Statement_list @11 tRBRACE

    tLPAR  shift, and go to state 64


state 40

   23 Function_call: tID . tLPAR Arguments tRPAR tSEMI
   75 Assignement_statement: tID . tASSIGN Expression tSEMI

    tASSIGN  shift, and go to state 65
    tLPAR    shift, and go to state 66


state 41

    8 Corps: Declarations Statement_list .
   17 Statement_list: Statement_list . Statement

    tPRINT  shift, and go to state 37
    tIF     shift, and go to state 38
    tWHILE  shift, and go to state 39
    tID     shift, and go to state 40

    $default  reduce using rule 8 (Corps)

    Statement              go to state 67
    Function_call          go to state 43
    Selection_statement    go to state 44
    Iteration_statement    go to state 45
    Print_statement        go to state 46
    Assignement_statement  go to state 47


state 42

   16 Statement_list: Statement .

    $default  reduce using rule 16 (Statement_list)


state 43

   20 Statement: Function_call .

    $default  reduce using rule 20 (Statement)


state 44

   19 Statement: Selection_statement .

    $default  reduce using rule 19 (Statement)


state 45

   21 Statement: Iteration_statement .

    $default  reduce using rule 21 (Statement)


state 46

   22 Statement: Print_statement .

    $default  reduce using rule 22 (Statement)


state 47

   18 Statement: Assignement_statement .

    $default  reduce using rule 18 (Statement)


state 48

   49 Declaration_list: Declaration_list Declaration_statement .

    $default  reduce using rule 49 (Declaration_list)


state 49

    7 Function: Type_specifier tID @1 tLPAR Parameter_list tRPAR tLBRACE Corps . Return_statement @2 tRBRACE

    tRETURN  shift, and go to state 35

    $default  reduce using rule 71 (Return_statement)

    Return_statement  go to state 68


state 50

   55 Declaration_int: tID tASSIGN . Expression
   56                | tID tASSIGN . Expression tCOMMA Declaration_int

    tLPAR  shift, and go to state 55
    tNB    shift, and go to state 57
    tID    shift, and go to state 58

    Expression  go to state 69
    Facteur     go to state 60


state 51

   57 Declaration_int: tID tCOMMA . Declaration_int

    tID  shift, and go to state 32

    Declaration_int  go to state 70


state 52

   50 Declaration_statement: tINT Declaration_int tSEMI .

    $default  reduce using rule 50 (Declaration_statement)


state 53

   52 Declaration_const: tID . tASSIGN tNB
   53                  | tID . tASSIGN tNB tCOMMA Declaration_const

    tASSIGN  shift, and go to state 71


state 54

   51 Declaration_statement: tCONST tINT Declaration_const . tSEMI

    tSEMI  shift, and go to state 72


state 55

   33 Facteur: tLPAR . Expression tRPAR

    tLPAR  shift, and go to state 55
    tNB    shift, and go to state 57
    tID    shift, and go to state 58

    Expression  go to state 73
    Facteur     go to state 60


state 56

   73 Return_statement: tRETURN tSEMI .

    $default  reduce using rule 73 (Return_statement)


state 57

   31 Facteur: tNB .

    $default  reduce using rule 31 (Facteur)


state 58

   32 Facteur: tID .

    $default  reduce using rule 32 (Facteur)


state 59

   26 Expression: Expression . tADD Expression
   27           | Expression . tSUB Expression
   28           | Expression . tMUL Expression
   29           | Expression . tDIV Expression
   72 Return_statement: tRETURN Expression . tSEMI

    tADD   shift, and go to state 74
    tSUB   shift, and go to state 75
    tMUL   shift, and go to state 76
    tDIV   shift, and go to state 77
    tSEMI  shift, and go to state 78


state 60

   30 Expression: Facteur .

    $default  reduce using rule 30 (Expression)


state 61

    4 Function: Type_specifier tMAIN tLPAR Parameter_list tRPAR tLBRACE Corps Return_statement tRBRACE .

    $default  reduce using rule 4 (Function)


state 62

   74 Print_statement: tPRINT tLPAR . Expression tRPAR tSEMI

    tLPAR  shift, and go to state 55
    tNB    shift, and go to state 57
    tID    shift, and go to state 58

    Expression  go to state 79
    Facteur     go to state 60


state 63

   61 Selection_statement: tIF tLPAR . Conditions @3 tRPAR tLBRACE @4 Corps @5 tRBRACE Else_statement

    tNOT   shift, and go to state 80
    tLPAR  shift, and go to state 81
    tNB    shift, and go to state 57
    tID    shift, and go to state 58

    Expression  go to state 82
    Facteur     go to state 60
    Conditions  go to state 83
    Condition   go to state 84


state 64

   70 Iteration_statement: tWHILE tLPAR . @8 Conditions @9 tRPAR tLBRACE @10 Statement_list @11 tRBRACE

    $default  reduce using rule 66 (@8)

    @8  go to state 85


state 65

   75 Assignement_statement: tID tASSIGN . Expression tSEMI

    tLPAR  shift, and go to state 55
    tNB    shift, and go to state 57
    tID    shift, and go to state 58

    Expression  go to state 86
    Facteur     go to state 60


state 66

   23 Function_call: tID tLPAR . Arguments tRPAR tSEMI

    tLPAR  shift, and go to state 55
    tNB    shift, and go to state 57
    tID    shift, and go to state 58

    Arguments   go to state 87
    Expression  go to state 88
    Facteur     go to state 60


state 67

   17 Statement_list: Statement_list Statement .

    $default  reduce using rule 17 (Statement_list)


state 68

    7 Function: Type_specifier tID @1 tLPAR Parameter_list tRPAR tLBRACE Corps Return_statement . @2 tRBRACE

    $default  reduce using rule 6 (@2)

    @2  go to state 89


state 69

   26 Expression: Expression . tADD Expression
   27           | Expression . tSUB Expression
   28           | Expression . tMUL Expression
   29           | Expression . tDIV Expression
   55 Declaration_int: tID tASSIGN Expression .
   56                | tID tASSIGN Expression . tCOMMA Declaration_int

    tADD    shift, and go to state 74
    tSUB    shift, and go to state 75
    tMUL    shift, and go to state 76
    tDIV    shift, and go to state 77
    tCOMMA  shift, and go to state 90

    $default  reduce using rule 55 (Declaration_int)


state 70

   57 Declaration_int: tID tCOMMA Declaration_int .

    $default  reduce using rule 57 (Declaration_int)


state 71

   52 Declaration_const: tID tASSIGN . tNB
   53                  | tID tASSIGN . tNB tCOMMA Declaration_const

    tNB  shift, and go to state 91


state 72

   51 Declaration_statement: tCONST tINT Declaration_const tSEMI .

    $default  reduce using rule 51 (Declaration_statement)


state 73

   26 Expression: Expression . tADD Expression
   27           | Expression . tSUB Expression
   28           | Expression . tMUL Expression
   29           | Expression . tDIV Expression
   33 Facteur: tLPAR Expression . tRPAR

    tADD   shift, and go to state 74
    tSUB   shift, and go to state 75
    tMUL   shift, and go to state 76
    tDIV   shift, and go to state 77
    tRPAR  shift, and go to state 92


state 74

   26 Expression: Expression tADD . Expression

    tLPAR  shift, and go to state 55
    tNB    shift, and go to state 57
    tID    shift, and go to state 58

    Expression  go to state 93
    Facteur     go to state 60


state 75

   27 Expression: Expression tSUB . Expression

    tLPAR  shift, and go to state 55
    tNB    shift, and go to state 57
    tID    shift, and go to state 58

    Expression  go to state 94
    Facteur     go to state 60


state 76

   28 Expression: Expression tMUL . Expression

    tLPAR  shift, and go to state 55
    tNB    shift, and go to state 57
    tID    shift, and go to state 58

    Expression  go to state 95
    Facteur     go to state 60


state 77

   29 Expression: Expression tDIV . Expression

    tLPAR  shift, and go to state 55
    tNB    shift, and go to state 57
    tID    shift, and go to state 58

    Expression  go to state 96
    Facteur     go to state 60


state 78

   72 Return_statement: tRETURN Expression tSEMI .

    $default  reduce using rule 72 (Return_statement)


state 79

   26 Expression: Expression . tADD Expression
   27           | Expression . tSUB Expression
   28           | Expression . tMUL Expression
   29           | Expression . tDIV Expression
   74 Print_statement: tPRINT tLPAR Expression . tRPAR tSEMI

    tADD   shift, and go to state 74
    tSUB   shift, and go to state 75
    tMUL   shift, and go to state 76
    tDIV   shift, and go to state 77
    tRPAR  shift, and go to state 97


state 80

   36 Conditions: tNOT . Condition

    tLPAR  shift, and go to state 81
    tNB    shift, and go to state 57
    tID    shift, and go to state 58

    Expression  go to state 82
    Facteur     go to state 60
    Condition   go to state 98


state 81

   33 Facteur: tLPAR . Expression tRPAR
   37 Condition: tLPAR . Expression tLT Expression tRPAR
   38          | tLPAR . Expression tGT Expression tRPAR
   39          | tLPAR . Expression tEQ Expression tRPAR

    tLPAR  shift, and go to state 55
    tNB    shift, and go to state 57
    tID    shift, and go to state 58

    Expression  go to state 99
    Facteur     go to state 60


state 82

   26 Expression: Expression . tADD Expression
   27           | Expression . tSUB Expression
   28           | Expression . tMUL Expression
   29           | Expression . tDIV Expression
   40 Condition: Expression . tLT Expression
   41          | Expression . tGT Expression
   42          | Expression . tEQ Expression
   43          | Expression .

    tADD  shift, and go to state 74
    tSUB  shift, and go to state 75
    tMUL  shift, and go to state 76
    tDIV  shift, and go to state 77
    tLT   shift, and go to state 100
    tGT   shift, and go to state 101
    tEQ   shift, and go to state 102

    $default  reduce using rule 43 (Condition)


state 83

   34 Conditions: Conditions . Separator Condition
   61 Selection_statement: tIF tLPAR Conditions . @3 tRPAR tLBRACE @4 Corps @5 tRBRACE Else_statement

    tAND  shift, and go to state 103
    tOR   shift, and go to state 104

    $default  reduce using rule 58 (@3)

    Separator  go to state 105
    @3         go to state 106


state 84

   35 Conditions: Condition .

    $default  reduce using rule 35 (Conditions)


state 85

   70 Iteration_statement: tWHILE tLPAR @8 . Conditions @9 tRPAR tLBRACE @10 Statement_list @11 tRBRACE
